-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 17, 18
-
Component/s: hotspot
-
b12
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8274487 | 17.0.2 | Tobias Hartmann | P3 | Resolved | Fixed | b01 |
Test on x86 with option "-XX:UseAVX=2 -Djdk.incubator.vector.test.loop-iterations=400":
config AbstractVectorConversionTest.getRunTime(org.testng.internal.TestResult@5560f6dd): success
test Vector256ConversionTests.castShape(Species[short, 16, S_256_BIT], Species[byte, 64, S_512_BIT], short(i)): success
castShape took 814 ms
config AbstractVectorConversionTest.getRunTime(org.testng.internal.TestResult@198fb10e): success
2039 Phi === 1424 18810 18778 [[ 18818 19022 19060 ]] #rawptr:BotPTR !jvms: ByteVector::blendTemplate @ bci:26 (line 1886) Byte256Vector::blend @ bci:11 (line 370) Byte256Vector::blend @ bci:3 (line 41) ByteVector::sliceTemplate @ bci:75 (line 1978) Byte256Vector::slice @ bci:3 (line 378) Byte256Vector::slice @ bci:3 (line 41) AbstractVector::convertShapeTemplate @ bci:266 (line 373) Short256Vector::convertShape @ bci:4 (line 248) AbstractVector::castShape @ bci:31 (line 287) AbstractVectorConversionTest::conversion_kernel @ bci:374 (line 449)
1389 CallStaticJavaDirect === 10659 0 2076 29 0 2089 16867 631 16865 642 644 16656 0 16657 16658 0 0 646 16659 16660 0 436 16869 655 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 18670 0 0 0 2090 2091 0 0 0 0 0 0 0 1395 1394 1393 1392 26873 2090 1391 18865 18864 [[ 1390 1388 2092 2096 2104 13454 ]] Static wrapper for: _new_instance_Java # rawptr:NotNull ( java/lang/Object:NotNull * ) C=0.000100 ByteVector::rearrangeTemplate @ bci:24 (line 2093) reexecute Byte256Vector::rearrange @ bci:7 (line 412) Byte256Vector::rearrange @ bci:2 (line 41) ByteVector::sliceTemplate @ bci:64 (line 1978) Byte256Vector::slice @ bci:3 (line 378) Byte256Vector::slice @ bci:3 (line 41) AbstractVector::convertShapeTemplate @ bci:266 (line 373) Short256Vector::convertShape @ bci:4 (line 248) AbstractVector::castShape @ bci:31 (line 287) AbstractVectorConversionTest::conversion_kernel @ bci:374 (line 449) !jvms: ByteVector::blendTemplate @ bci:26 (line 1886) Byte256Vector::blend @ bci:11 (line 370) Byte256Vector::blend @ bci:3 (line 41) ByteVector::sliceTemplate @ bci:75 (line 1978) Byte256Vector::slice @ bci:3 (line 378) Byte256Vector::slice @ bci:3 (line 41) AbstractVector::convertShapeTemplate @ bci:266 (line 373) Short256Vector::convertShape @ bci:4 (line 248) AbstractVector::castShape @ bci:31 (line 287) AbstractVectorConversionTest::conversion_kernel @ bci:374 (line 449)
# To suppress the following error report, specify this argument
# after -XX: or in .hotspotrc: SuppressErrorAt=/buildOopMap.cpp:360
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/tmp/ci-scripts/jdk_src/src/hotspot/share/opto/buildOopMap.cpp:360), pid=12841, tid=12904
# assert(false) failed: there should be a oop in OopMap instead of a live raw oop at safepoint
#
# JRE version: OpenJDK Runtime Environment (18.0) (fastdebug build 18-internal+0-git-7cc1eb3e5)
# Java VM: OpenJDK 64-Bit Server VM (fastdebug 18-internal+0-git-7cc1eb3e5, mixed mode, sharing, compressed oops, compressed class ptrs, g1 gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0x63bcf6] OopFlow::build_oop_map(Node*, int, PhaseRegAlloc*, int*)+0xa06
#
# No core dump will be written. Core dumps have been disabled. To enable core dumping, try "ulimit -c unlimited" before starting Java again
#
# An error report file with more information is saved as:
# /tmp/work/scratch/hs_err_pid12841.log
#
# Compiler replay data is saved as:
# /tmp/work/scratch/replay_pid12841.log
#
# If you would like to submit a bug report, please visit:
# https://bugreport.java.com/bugreport/crash.jsp
#
STDERR:
WARNING: Using incubator modules: jdk.incubator.vector
rerun:
cd /tmp/work/scratch && \
HOME=/home/ent-admin \
LANG=en_US.UTF-8 \
LC_ALL=en_US.UTF-8 \
PATH=/bin:/usr/bin:/usr/sbin \
CLASSPATH=/tmp/work/classes/jdk/incubator/vector/Vector256ConversionTests.d:/home/ent-admin/ci-scripts/jdk_src/test/jdk/jdk/incubator/vector:/mnt/share/openjdk/packages/jtreg/jtreg/lib/testng.jar:/mnt/share/openjdk/packages/jtreg/jtreg/lib/jcommander.jar:/mnt/share/openjdk/packages/jtreg/jtreg/lib/guice.jar:/mnt/share/openjdk/packages/jtreg/jtreg/lib/javatest.jar:/mnt/share/openjdk/packages/jtreg/jtreg/lib/jtreg.jar \
/mnt/share/homes/njian/jdk/daily-build/x86_64-fastdebug/jdk-master/bin/java \
-Dtest.vm.opts='-ea -esa -Djdk.incubator.vector.test.loop-iterations=400 -Xmx768m -server' \
-Dtest.tool.vm.opts='-J-ea -J-esa -J-Djdk.incubator.vector.test.loop-iterations=400 -J-Xmx768m -J-server' \
-Dtest.compiler.opts= \
-Dtest.java.opts= \
-Dtest.jdk=/mnt/share/homes/njian/jdk/daily-build/x86_64-fastdebug/jdk-master \
-Dcompile.jdk=/mnt/share/homes/njian/jdk/daily-build/x86_64-fastdebug/jdk-master \
-Dtest.timeout.factor=8.0 \
-Dtest.root=/home/ent-admin/ci-scripts/jdk_src/test/jdk \
-Dtest.name=jdk/incubator/vector/Vector256ConversionTests.java \
-Dtest.file=/home/ent-admin/ci-scripts/jdk_src/test/jdk/jdk/incubator/vector/Vector256ConversionTests.java \
-Dtest.src=/home/ent-admin/ci-scripts/jdk_src/test/jdk/jdk/incubator/vector \
-Dtest.src.path=/home/ent-admin/ci-scripts/jdk_src/test/jdk/jdk/incubator/vector \
-Dtest.classes=/tmp/work/classes/jdk/incubator/vector/Vector256ConversionTests.d \
-Dtest.class.path=/tmp/work/classes/jdk/incubator/vector/Vector256ConversionTests.d \
-Dtest.class.path.prefix=/tmp/work/classes/jdk/incubator/vector/Vector256ConversionTests.d:/home/ent-admin/ci-scripts/jdk_src/test/jdk/jdk/incubator/vector \
-Dtest.modules='jdk.incubator.vector java.base/jdk.internal.vm.annotation' \
--add-modules jdk.incubator.vector,java.base \
--add-exports java.base/jdk.internal.vm.annotation=ALL-UNNAMED \
-ea \
-esa \
-Djdk.incubator.vector.test.loop-iterations=400 \
-Xmx768m \
-server \
-XX:-TieredCompilation \
--add-opens jdk.incubator.vector/jdk.incubator.vector=ALL-UNNAMED \
com.sun.javatest.regtest.agent.MainWrapper /tmp/work/jdk/incubator/vector/Vector256ConversionTests.d/testng.0.jta jdk/incubator/vector/Vector256ConversionTests.java false Vector256ConversionTests
TEST RESULT: Failed. Unexpected exit from test [exit code: 134]
My system info: Intel(R) Xeon(R) Silver 4116 CPU @ 2.10GHz.
config AbstractVectorConversionTest.getRunTime(org.testng.internal.TestResult@5560f6dd): success
test Vector256ConversionTests.castShape(Species[short, 16, S_256_BIT], Species[byte, 64, S_512_BIT], short(i)): success
castShape took 814 ms
config AbstractVectorConversionTest.getRunTime(org.testng.internal.TestResult@198fb10e): success
2039 Phi === 1424 18810 18778 [[ 18818 19022 19060 ]] #rawptr:BotPTR !jvms: ByteVector::blendTemplate @ bci:26 (line 1886) Byte256Vector::blend @ bci:11 (line 370) Byte256Vector::blend @ bci:3 (line 41) ByteVector::sliceTemplate @ bci:75 (line 1978) Byte256Vector::slice @ bci:3 (line 378) Byte256Vector::slice @ bci:3 (line 41) AbstractVector::convertShapeTemplate @ bci:266 (line 373) Short256Vector::convertShape @ bci:4 (line 248) AbstractVector::castShape @ bci:31 (line 287) AbstractVectorConversionTest::conversion_kernel @ bci:374 (line 449)
1389 CallStaticJavaDirect === 10659 0 2076 29 0 2089 16867 631 16865 642 644 16656 0 16657 16658 0 0 646 16659 16660 0 436 16869 655 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 18670 0 0 0 2090 2091 0 0 0 0 0 0 0 1395 1394 1393 1392 26873 2090 1391 18865 18864 [[ 1390 1388 2092 2096 2104 13454 ]] Static wrapper for: _new_instance_Java # rawptr:NotNull ( java/lang/Object:NotNull * ) C=0.000100 ByteVector::rearrangeTemplate @ bci:24 (line 2093) reexecute Byte256Vector::rearrange @ bci:7 (line 412) Byte256Vector::rearrange @ bci:2 (line 41) ByteVector::sliceTemplate @ bci:64 (line 1978) Byte256Vector::slice @ bci:3 (line 378) Byte256Vector::slice @ bci:3 (line 41) AbstractVector::convertShapeTemplate @ bci:266 (line 373) Short256Vector::convertShape @ bci:4 (line 248) AbstractVector::castShape @ bci:31 (line 287) AbstractVectorConversionTest::conversion_kernel @ bci:374 (line 449) !jvms: ByteVector::blendTemplate @ bci:26 (line 1886) Byte256Vector::blend @ bci:11 (line 370) Byte256Vector::blend @ bci:3 (line 41) ByteVector::sliceTemplate @ bci:75 (line 1978) Byte256Vector::slice @ bci:3 (line 378) Byte256Vector::slice @ bci:3 (line 41) AbstractVector::convertShapeTemplate @ bci:266 (line 373) Short256Vector::convertShape @ bci:4 (line 248) AbstractVector::castShape @ bci:31 (line 287) AbstractVectorConversionTest::conversion_kernel @ bci:374 (line 449)
# To suppress the following error report, specify this argument
# after -XX: or in .hotspotrc: SuppressErrorAt=/buildOopMap.cpp:360
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/tmp/ci-scripts/jdk_src/src/hotspot/share/opto/buildOopMap.cpp:360), pid=12841, tid=12904
# assert(false) failed: there should be a oop in OopMap instead of a live raw oop at safepoint
#
# JRE version: OpenJDK Runtime Environment (18.0) (fastdebug build 18-internal+0-git-7cc1eb3e5)
# Java VM: OpenJDK 64-Bit Server VM (fastdebug 18-internal+0-git-7cc1eb3e5, mixed mode, sharing, compressed oops, compressed class ptrs, g1 gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0x63bcf6] OopFlow::build_oop_map(Node*, int, PhaseRegAlloc*, int*)+0xa06
#
# No core dump will be written. Core dumps have been disabled. To enable core dumping, try "ulimit -c unlimited" before starting Java again
#
# An error report file with more information is saved as:
# /tmp/work/scratch/hs_err_pid12841.log
#
# Compiler replay data is saved as:
# /tmp/work/scratch/replay_pid12841.log
#
# If you would like to submit a bug report, please visit:
# https://bugreport.java.com/bugreport/crash.jsp
#
STDERR:
WARNING: Using incubator modules: jdk.incubator.vector
rerun:
cd /tmp/work/scratch && \
HOME=/home/ent-admin \
LANG=en_US.UTF-8 \
LC_ALL=en_US.UTF-8 \
PATH=/bin:/usr/bin:/usr/sbin \
CLASSPATH=/tmp/work/classes/jdk/incubator/vector/Vector256ConversionTests.d:/home/ent-admin/ci-scripts/jdk_src/test/jdk/jdk/incubator/vector:/mnt/share/openjdk/packages/jtreg/jtreg/lib/testng.jar:/mnt/share/openjdk/packages/jtreg/jtreg/lib/jcommander.jar:/mnt/share/openjdk/packages/jtreg/jtreg/lib/guice.jar:/mnt/share/openjdk/packages/jtreg/jtreg/lib/javatest.jar:/mnt/share/openjdk/packages/jtreg/jtreg/lib/jtreg.jar \
/mnt/share/homes/njian/jdk/daily-build/x86_64-fastdebug/jdk-master/bin/java \
-Dtest.vm.opts='-ea -esa -Djdk.incubator.vector.test.loop-iterations=400 -Xmx768m -server' \
-Dtest.tool.vm.opts='-J-ea -J-esa -J-Djdk.incubator.vector.test.loop-iterations=400 -J-Xmx768m -J-server' \
-Dtest.compiler.opts= \
-Dtest.java.opts= \
-Dtest.jdk=/mnt/share/homes/njian/jdk/daily-build/x86_64-fastdebug/jdk-master \
-Dcompile.jdk=/mnt/share/homes/njian/jdk/daily-build/x86_64-fastdebug/jdk-master \
-Dtest.timeout.factor=8.0 \
-Dtest.root=/home/ent-admin/ci-scripts/jdk_src/test/jdk \
-Dtest.name=jdk/incubator/vector/Vector256ConversionTests.java \
-Dtest.file=/home/ent-admin/ci-scripts/jdk_src/test/jdk/jdk/incubator/vector/Vector256ConversionTests.java \
-Dtest.src=/home/ent-admin/ci-scripts/jdk_src/test/jdk/jdk/incubator/vector \
-Dtest.src.path=/home/ent-admin/ci-scripts/jdk_src/test/jdk/jdk/incubator/vector \
-Dtest.classes=/tmp/work/classes/jdk/incubator/vector/Vector256ConversionTests.d \
-Dtest.class.path=/tmp/work/classes/jdk/incubator/vector/Vector256ConversionTests.d \
-Dtest.class.path.prefix=/tmp/work/classes/jdk/incubator/vector/Vector256ConversionTests.d:/home/ent-admin/ci-scripts/jdk_src/test/jdk/jdk/incubator/vector \
-Dtest.modules='jdk.incubator.vector java.base/jdk.internal.vm.annotation' \
--add-modules jdk.incubator.vector,java.base \
--add-exports java.base/jdk.internal.vm.annotation=ALL-UNNAMED \
-ea \
-esa \
-Djdk.incubator.vector.test.loop-iterations=400 \
-Xmx768m \
-server \
-XX:-TieredCompilation \
--add-opens jdk.incubator.vector/jdk.incubator.vector=ALL-UNNAMED \
com.sun.javatest.regtest.agent.MainWrapper /tmp/work/jdk/incubator/vector/Vector256ConversionTests.d/testng.0.jta jdk/incubator/vector/Vector256ConversionTests.java false Vector256ConversionTests
TEST RESULT: Failed. Unexpected exit from test [exit code: 134]
My system info: Intel(R) Xeon(R) Silver 4116 CPU @ 2.10GHz.
- backported by
-
JDK-8274487 C2: CheckCastPP which should closely follow Allocate is sunk of a loop
-
- Resolved
-
- relates to
-
JDK-8252372 Check if cloning is required to move loads out of loops in PhaseIdealLoop::split_if_with_blocks_post()
-
- Resolved
-
-
JDK-8276064 CheckCastPP with raw oop input floats below a safepoint
-
- Resolved
-
- links to
-
Commit
openjdk/jdk17u/6141fccd
-
Commit
openjdk/jdk/2ff4c01d
-
Review
openjdk/jdk17u/102
-
Review
openjdk/jdk/5199
(2 links to)