8271600: C2: CheckCastPP which should closely follow Allocate is sunk of a loop